[tool.poetry]
name = "recommender"
version = "0.1.0"
description = ""
authors = ["chrv <c.h.onguene@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
einops = "^0.4.1"
flax = "^0.5.2"
jax = {extras = ["cpu"], version = "^0.3.13"}
jaxlib = "^0.3.10"
optax = "^0.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
